==================================
Rilascio 1.69.31    del 30/05/2015
==================================

Tolte le informazioni esplicite sul copyright dalle applicazioni Cambusa e arricchiti i metadati.

Filibuster: gestita la policy sui cookie.

==================================
Rilascio 1.69.30    del 23/05/2015
==================================

ryHelper: utilizzato l'elemento "input" per il fuoco.

ryButton: utilizzato l'elemento "input" per il fuoco.

==================================
Rilascio 1.69.29    del 20/05/2015
==================================

Quiver: introdotta una variabile globale che esprime lo spacename dell'istruzione corrente.

RYJAX: migliorata la "getnodes" (analizza l'intero albero).

==================================
Rilascio 1.69.28    del 18/05/2015
==================================

Generalizzata la chiamata a "quiver_execute".

==================================
Rilascio 1.69.27    del 16/05/2015
==================================

ryCode: aggiunta la proprietà "uppercase".

ryTabs: aggiunta la proprietà "closable".

==================================
Rilascio 1.69.26    del 14/05/2015
==================================

Passati i parametri alla "RYWINZ.addform" per gestire bene il bottone "Close" di ryTabs.

==================================
Rilascio 1.69.25    del 10/05/2015
==================================

Filbuster: ottimizzate le query e migliorata l'interfaccia ad albero.

ryFamily: perfezionamenti e nuove proprietà.

Miglioramenti nel comportamento di rySource usato stand-alone.

==================================
Rilascio 1.69.24    del 09/05/2015
==================================

Filibuster: ottimizzazione (parziale) query.

ryFamily: fuoco e navigazione (non terminato).

==================================
Rilascio 1.69.23    del 05/05/2015
==================================

Amministrazione pagine Filibuster: aggiunta la modalità di navigazione ad albero.

==================================